--- a/import.html
+++ b/import.html
@@ -139,193 +139,4 @@ function numbers(l){
   return l.match(/[0-9:]+/g)||[];
 }
 
-function val(a,i){
-  return a && a[i] ? a[i] : "0";
-}
-
-/* ===== LOCAL STORAGE ===== */
-
-function saveLocal(){
-localStorage.setItem("ocr_matches",JSON.stringify(allMatches));
-}
-
-function loadLocal(){
-const data=localStorage.getItem("ocr_matches");
-if(data) allMatches=JSON.parse(data);
-renderTable();
-}
-
-/* ===== TABULKA ===== */
-
-function renderTable(){
-
-const tbody=document.querySelector("#statsTable tbody");
-tbody.innerHTML="";
-
-allMatches.forEach((m,i)=>{
-
-const tr1=document.createElement("tr");
-const tr2=document.createElement("tr");
-
-tr1.innerHTML=
-m.away.map((c,j)=>"<td class='"+(j==0?"left":"")+"'>"+c+"</td>").join("")+
-"<td>"+(m.category||"")+"</td>"+
-"<td>"+(m.playerAway||"")+"</td>"+
-"<td rowspan='2'><button onclick='openDialog("+i+")'>Aktualizovat</button></td>";
-
-tr2.innerHTML=
-m.home.map((c,j)=>"<td class='"+(j==0?"left":"")+"'>"+c+"</td>").join("")+
-"<td>"+(m.category||"")+"</td>"+
-"<td>"+(m.playerHome||"")+"</td>";
-
-tbody.appendChild(tr1);
-tbody.appendChild(tr2);
-});
-
-fillTeams();
-applyFilters();
-}
-
-/* ===== DIALOG ===== */
-
-function openDialog(i){
-editIndex=i;
-editDialog.showModal();
-}
-
-function saveEdit(){
-
-const cat=dlgCategory.value;
-const player=dlgPlayer.value;
-const other=player==="Pici"?"Kubele":"Pici";
-
-allMatches[editIndex].category=cat;
-allMatches[editIndex].playerAway=player;
-allMatches[editIndex].playerHome=other;
-
-saveLocal();
-renderTable();
-editDialog.close();
-}
-
-/* ===== OCR ===== */
-
-document.getElementById("img").addEventListener("change",async e=>{
-
-const file=e.target.files[0];
-if(!file) return;
-
-const r=await Tesseract.recognize(file,'eng');
-
-const text = r.data.text
-  .toUpperCase()
-  .replace(/1/g,"I")
-  .replace(/0/g,"O");
-
-/* NALEZENÍ TÝMŮ */
-
-let foundCodes=[];
-
-Object.entries(TEAM_MAP).forEach(([code,variants])=>{
-  variants.forEach(v=>{
-    if(text.includes(v) && !foundCodes.includes(code)){
-      foundCodes.push(code);
-    }
-  });
-});
-
-let awayTeam = TEAM_NAMES[foundCodes[0]] || "Hosté";
-let homeTeam = TEAM_NAMES[foundCodes[1]] || "Domácí";
-
-/* STATISTIKY */
-
-const shots=numbers(findLine(text,"SHOTS"));
-const hits=numbers(findLine(text,"HITS"));
-const faceoffs=numbers(findLine(text,"FACEOFF"));
-const attack=numbers(findLine(text,"TIME ON ATTACK"));
-const pp=numbers(findLine(text,"PP"));
-
-const away=[
-awayTeam,"Hosté",
-val(shots,0),val(shots,1),
-val(hits,0),val(hits,1),
-val(faceoffs,0),val(faceoffs,1),
-val(attack,0),val(attack,1),
-val(pp,0),val(pp,0),"Ne"
-];
-
-const home=[
-homeTeam,"Domácí",
-val(shots,1),val(shots,0),
-val(hits,1),val(hits,0),
-val(faceoffs,1),val(faceoffs,0),
-val(attack,1),val(attack,0),
-val(pp,1),val(pp,1),"Ne"
-];
-
-allMatches.push({away:away,home:home});
-
-saveLocal();
-renderTable();
-});
-
-/* ===== FILTRY ===== */
-
-function fillTeams(){
-const sel=document.getElementById("filterTeam");
-const set=new Set();
-allMatches.forEach(m=>{
-set.add(m.away[0]);
-set.add(m.home[0]);
-});
-sel.innerHTML='<option value="">Vše</option>';
-set.forEach(t=>{
-const o=document.createElement("option");
-o.textContent=t;
-sel.appendChild(o);
-});
-}
-
-function applyFilters(){
-
-const p=filterPlayer.value;
-const t=filterTeam.value;
-const c=filterCategory.value;
-
-const rows=document.querySelectorAll("#statsTable tbody tr");
-
-let games=0;
-
-for(let i=0;i<rows.length;i+=2){
-
-const r1=rows[i];
-const r2=rows[i+1];
-
-const player=r1.cells[14].innerText;
-const team=r1.cells[0].innerText;
-const cat=r1.cells[13].innerText;
-
-let show=true;
-
-if(p && player!==p) show=false;
-if(t && team!==t) show=false;
-if(c && cat!==c) show=false;
-
-r1.style.display=show?"":"none";
-r2.style.display=show?"":"none";
-
-if(show) games++;
-}
-
-summary.innerText="Zápasy: "+games;
-}
-
-filterPlayer.onchange=applyFilters;
-filterTeam.onchange=applyFilters;
-filterCategory.onchange=applyFilters;
-
-loadLocal();
-
-</script>
-</body>
-</html>
+function va
