--- a/statistiky.html
+++ b/statistiky.html
@@ -85,16 +85,16 @@ h2{margin-top:40px}
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, query, orderBy } 
+import { getFirestore, collection, addDoc, getDocs, query, orderBy }
 from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
-  apiKey: "AIzaSyD0jDnVNHZAs83g6FGwQT_nOpOCyT4NTNU",
+  apiKey: "AIzaSyD0jDnVNHAzs83g6FGwQT_nQpOCvI4NTNU",
   authDomain: "statistiky-6310a.firebaseapp.com",
   projectId: "statistiky-6310a",
-  storageBucket: "statistiky-6310a.appspot.com",
+  storageBucket: "statistiky-6310a.firebasestorage.app",
   messagingSenderId: "1023222901562",
-  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+  appId: "1:1023222901562:web:a28f835f4bb212958b7e03"
 };
 
 const app = initializeApp(firebaseConfig);
@@ -107,7 +107,7 @@ window.getDocs = getDocs;
 window.query = query;
 window.orderBy = orderBy;
 
-loadMatches();
+window.addEventListener("load", loadMatches);
 
 </script>
 
@@ -115,7 +115,6 @@ loadMatches();
 
 let loadedLines = [];
 
-/* NAČTENÍ TXT */
 document.getElementById("fileInput").addEventListener("change", e => {
 
     const reader = new FileReader();
@@ -130,7 +129,6 @@ document.getElementById("fileInput").addEventListener("change", e => {
     reader.readAsText(e.target.files[0]);
 });
 
-/* ULOŽENÍ */
 async function saveMatch(){
 
     if(loadedLines.length < 20){
@@ -151,7 +149,6 @@ async function saveMatch(){
     loadMatches();
 }
 
-/* NAČTENÍ HISTORIE */
 async function loadMatches(){
 
     const tbody = document.querySelector("#history tbody");
